@@ -3,7 +3,6 @@
 namespace Krzysztofzylka\MicroFramework\Extension\ErrorHandler;
 
 use Krzysztofzylka\MicroFramework\Extension\Log\Log;
-use Krzysztofzylka\MicroFramework\Kernel;
 
 /**
  * Error handlers
