@@ -2,6 +2,8 @@
 
 namespace Krzysztofzylka\MicroFramework\Extension\Table\Extra;
 
+use Krzysztofzylka\MicroFramework\Extension\Html\Html;
+
 /**
  * Cell
  * @package Extension\Table\Extra
@@ -20,5 +22,19 @@ class Cell
      * @var array
      */
     public array $data;
+
+    /**
+     * Html generator
+     * @var Html
+     */
+    public Html $html;
+
+    /**
+     * Constructor
+     */
+    public function __construct()
+    {
+        $this->html = new Html();
+    }
 
 }
