@@ -1,11 +1,11 @@
 {% extends "MicroFramework/Layout/dialogbox.twig" %}
 
 {% block content %}
-    <center>
+    <center class="mt-3">
         {{ message }}
         <form method="POST" action="{{ app.here }}">
             <input type="hidden" name="confirmAction" value="1" />
-            <input type="submit" value="Potwierdź" class="btn-primary mt-4" />
+            <input type="submit" class="btn btn-primary mt-4" value="{{ __('micro-framework.confirm.accept') }}" class="btn-primary mt-4" />
         </form>
     </center>
 
