@@ -30,6 +30,7 @@ micro-framework:
         min: Value must be more or equal to
         max: Value must be less or equal to
       is_numeric: Value must be numeric
+      allow_values: "Allowed values: {valueList}"
   debug:
     sqlTable: SQL
     configTable: Configuration
@@ -68,3 +69,5 @@ micro-framework:
     coming_soon: Coming soon
     line1: We are preparing changes for you.
     line2: Welcome back in a moment
+  confirm:
+    accept: Continue
